# genomeflow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-concepts.md  02-project-plan.md  03-tech-stack.md  通用技术教程创作指南.md
docs/tutorials/: README.md  tutorial-01-dna-analyzer.md  tutorial-02-rna-sequence.md  tutorial-03-protein-sequence.md  tutorial-04-visualization.md
src/genomeflow/: __init__.py  analyzer.py  base.py  cli.py  io.py  protein.py  rna.py  sequence.py
src/genomeflow/visualization/: __init__.py  composition.py  profile.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_io.py  test_protein.py  test_rna.py  test_sequence.py
